--- a/test/test.html
+++ b/test/test.html
@@ -24,7 +24,7 @@
             background-color: tomato;
             display: flex;
             width: 95%;
-            height: 100%;
+            height: auto;
             margin: auto;
             justify-content: center;
             flex-wrap: wrap;
